tạm commit để pull